--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,46 @@
+html {
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+}
+
 .App {
-  text-align: center;
+  min-height: 100vh;
+}
+
+#root {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.title {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  min-width: 40%;
 }
 
 ul {
   list-style: none;
+  padding-left: 0;
 }
+
+table {
+  border-spacing: 20px;
+  border-collapse: separate;
+  align-items: center;
+  text-align: center;
+}
+
+.totalStats, .dailyStats, .overallStats {
+  background-color: rgb(255, 223, 82);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px rgb(71,71,71);
+  justify-content: space-around;
+  align-items: center;
+  min-width: 40%;
+}
+
+
