--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,44 @@
-html {
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-}
-
-.App {
-  min-height: 100vh;
-}
-
-#root {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.title {
-  margin: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  min-width: 40%;
-}
-
 ul {
   list-style: none;
   padding-left: 0;
 }
 
-table {
-  border-spacing: 20px;
-  border-collapse: separate;
-  text-align: center;
+.title {
+  margin: 1vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  min-width: 50%;
+}
+
+img {
+  border: 2px solid black;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .totalStats, .dailyStats, .overallStats {
   background-color: rgb(255, 223, 82);
-  padding: 20px;
-  border-radius: 10px;
   box-shadow: 0px 5px 20px rgb(71,71,71);
-  justify-content: space-around;
-  align-items: center;
-  min-width: 40%;
+  border-radius: 15px;
+  padding: 10px;
+  margin: 5%;
+  min-width: 15%;
 }
 
+h3{
+  text-align: center;
+}
 
+footer {
+  position: -webkit-sticky;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
